--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = example-pkg-YOUR-USERNAME-HERE
-version = 0.0.1
-author = Example Author
-author_email = author@example.com
-description = A small example package
+name = vandyck_pycalculator
+version = 0.0.3
+author = Vandyck Lai Kai Yong
+author_email = vandycklai@gmail.com
+description = Mode, Median, Gaussian and Binomial distributions
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
+url = https://github.com/Laikaiyong/Vandyck-Pycalculate-Package
 project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+    Bug Tracker = https://github.com/Laikaiyong/Vandyck-Pycalculator-Package/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
