Rename package and debug issue

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = vandyck_pycalculator
-version = 0.0.3
+name = vancalculator
+version = 0.0.1
 author = Vandyck Lai Kai Yong
 author_email = vandycklai@gmail.com
 description = Mode, Median, Gaussian and Binomial distributions
